--- a/config.toml
+++ b/config.toml
@@ -37,7 +37,7 @@ avatar = "static/img/photo_fgn_cergic.png"
 favicon = "static/img/photo_fgn_cergic_small.png"
 
 # Your email address showed in the contact section
-email = "florence.goffette-nagot@cnrs.fr"
+# "email = "florence.goffette-nagot@cnrs.fr"
 
 # If you don't want to show your contact information in the index
 contact_in_index = false
