--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ theme = "kodama-theme"
 [markdown]
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
-highlight_code = false
+# highlight_code = false
 
 [translations]
 Biography = "Presentation"
